tests/kiama/negative/type_errors/L1/5_nonintconstant2.ob
MODULE nonintconstant;

CONST
    aconst1 = 10;
    aconst2 = TRUE OR (aconst1 = 100);

END nonintconstant.
